Coded by added at the bottom

--- a/index.html
+++ b/index.html
@@ -135,6 +135,14 @@
         </div>
       </div>
     </div>
+
+    <p class="coded-by">
+      <a href="https://github.com/tania-garcia-gallego/Weather-app"
+        >Open source code</a
+      >
+      by Tania Garcia Gallego
+    </p>
+
     <script src="src/index.js"></script>
   </body>
 </html>
